formula in network